@@ -1,7 +1,5 @@
 package com.vwo.mobile.models;
 
-import static okhttp3.internal.Util.UTF_8;
-
 import com.vwo.mobile.utils.VWOUrlBuilder;
 
 import org.json.JSONException;
@@ -12,6 +10,9 @@ import java.net.URLEncoder;
 import java.util.HashMap;
 
 public class NonData360DimensionPostData implements IEvent {
+
+    public static final String CHARSET_UTF_8 = "UTF-8";
+
     public static final String KEY_U = "u";
     public static final String TAGS = VWOUrlBuilder.TAGS;
     private HashMap<String, Object> dimensions;
@@ -30,10 +31,13 @@ public class NonData360DimensionPostData implements IEvent {
         uJson.put(KEY_U, attributes);
         JSONObject tagsJson = new JSONObject();
         try {
-            String encoded = URLEncoder.encode(uJson.toString(), UTF_8.name());
+            String encoded = URLEncoder.encode(uJson.toString(), CHARSET_UTF_8);
             tagsJson.put(TAGS, encoded);
             return tagsJson;
         } catch (UnsupportedEncodingException exception) {
+            return new JSONObject();
+        } catch (Exception ex) {
+            // for unknown surprises that may occur
             return new JSONObject();
         }
     }
